# django-threaded-email

./: README.md  pyproject.toml  setup.cfg
django_threaded_email/: __init__.py  django_threaded_email.py
