[metadata]

name = 
version = 0.0.1
author = Matti Lamppu
author_email = lamppu.matti.akseli@gmail.com
description = 
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/MrThearMan/
project_urls =
    Bug Tracker = https://github.com/MrThearMan//issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = find:
python_requires = >=3.9